--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>api el tiempo</title>
+    <title>App del Clima</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>El tiempo en Coristanco</h1>
+    </header>
+    <main>
+        <section class="temperature">
+            <h2>Temperatura actual</h2>
+            <p id="temperature">-- °C</p>
+        </section>
+        <section class="details">
+            <p> Viento: <span id="wind">-- km/h</span></p>
+            <p> Humedad: <span id="humidity">-- %</span></p>
+        </section>
+    </main>
+    <footer>
+        <p>Datos obtenidos del tiempo</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
