--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,23 +9,21 @@
     <script src=""></script>
 
 </head>
+
 <body>
     <header>
         <h1>El tiempo en Coristanco</h1>
     </header>
     <main>
-        <section class="temperature">
-            <h2>Temperatura actual</h2>
-            <p id="temperature">-- °C</p>
+        <section id="temperatureZone">
         </section>
-        <section class="details">
-            <p> Viento: <span id="wind">-- km/h</span></p>
-            <p> Humedad: <span id="humidity">-- %</span></p>
+        <section id="detailsZone">
         </section>
     </main>
     <footer>
         <p>Datos obtenidos del tiempo</p>
     </footer>
-<script src="js/index.js"></script>
+    <script src="js/index.js"></script>
 </body>
+
 </html>
